--- a/index.css
+++ b/index.css
@@ -46,6 +46,11 @@ body{
     align-items: center;
 }
 
+#image-view{
+    max-width: 100%;
+    max-height: 100%;
+}
+
 #image-view[src=""]{
     display: none;
 }
