--- a/electron/header/header.scss
+++ b/electron/header/header.scss
@@ -22,15 +22,18 @@
         display: flex;
         align-items: center;
         & #window-icon {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             width: fit-content;
             height: fit-content;
             box-sizing: border-box;
             margin: 0 5px;
-            width: 16px;
-            height: 16px;
+            width: 20px;
+            height: 20px;
             & > img {
-                width: 100%;
-                height: 100%;
+                max-width: 20px;
+                max-height: 20px;
             }
         }
         & #window-name{
