--- a/index.css
+++ b/index.css
@@ -83,6 +83,7 @@ body{
     justify-content: center;
     align-items: center;
     margin: 0 .5rem 0 0;
+    user-select: none;
 }
 
 .icon:first-child{
